--omnetpp-3.0a7 released-- line added to ChangeLog by _scripts/tag

--- a/include/ChangeLog
+++ b/include/ChangeLog
@@ -1,3 +1,5 @@
+2004-09-24  ------ omnetpp-3.0a7 released ------
+
 2004-09-15  Andras Varga
 
         * ctopo.h: added two utility functions to cTopology:  
