--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-09-24  ------ omnetpp-3.0a7 released ------
+
 2004-09-24  Andras Varga
 
         * opp_msgc: adds some Doxygen comments to the generated classes
