--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-09-24  ------ omnetpp-3.0a7 released ------
+
 2004-09-13  Andras Varga
 
         * saxparser_libxml.cc: if document has DOCTYPE, validate document 
