--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,5 @@
+2004-09-24  ------ omnetpp-3.0a7 released ------
+
 2004-09-15  Andras Varga
 
         * ctopo.cc: implemented 2 new extractByModuleType() functions, see
