--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-09-24  ------ omnetpp-3.0a7 released ------
+
 2004-09-24  Andras Varga
 
         * opp_makemake.in, opp_nmakemake: don't delete $(TARGET) with "-n"
