--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-25  Andras Varga
+
+        * opp_msgc: added support for initializers in structs (generates
+        constructor for structs now). Fields without initializer are 
+        initialized to zero.
+
 2004-09-24  ------ omnetpp-3.0a7 released ------
 
 2004-09-24  Andras Varga
