--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-04  Andras Varga
+
+        * opp_makemake.in: "tr [a-z] [A-Z]" changed to "tr '[a-z]' '[A-Z]'"
+        to prevent shell expansion [patch by Kendy Kutzner]
+
 2004-09-24  ------ omnetpp-3.0a7 released ------
 
 2004-09-24  Andras Varga
