--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-10-04  ------ omnetpp-3.0a8 released ------
+
 2004-09-25  Andras Varga
 
         * opp_msgc: added support for initializers in structs (generates
