--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,5 @@
+2004-10-04  ------ omnetpp-3.0a8 released ------
+
 2004-09-24  ------ omnetpp-3.0a7 released ------
 
 FIXME NED file, dynamic loading, par=false in NED causes "cannot convert D to ..."
