--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-10-04  ------ omnetpp-3.0a8 released ------
+
 2004-09-27  Andras Varga
 
         * inspector.cc: display class name too on "inspect" buttons 
