--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,5 @@
+2004-10-04  ------ omnetpp-3.0a8 released ------
+
 2004-10-04  Andras Varga
 
         * opp_makemake.in: "tr [a-z] [A-Z]" changed to "tr '[a-z]' '[A-Z]'"
