--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-10  Andras Varga
+
+	* main.tcl: changed default "Run until" run mode to Express (was Normal)
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-09-27  Andras Varga
