*** empty log message ***

--- a/doc/README
+++ b/doc/README
@@ -117,7 +117,7 @@ currently not affiliated with the University.
 Here's a list of the people who have or had anything to do with OMNeT++:
 
 Principal author:
-        Andras Varga            andras@whale.hit.bme.hu
+        Andras Varga            andras@omnetpp.org
 
 Advisor:
         Gyorgy Pongor           BME-HIT, pongor@hit.bme.hu
