--- a/src/utils/ChangeLog
+++ b/src/utils/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-15  Andras Varga
+
+	* opp_makemake.in: fixed "-L" bug introduced in 3.0a7 (2004-09-14)
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-10-04  Andras Varga
