--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,12 @@
+Remaining issues: 
+- gate directions not observed in Conn Props dialog.
+- when submodule has random placement, strange thing happens after OK'ing Props dialog
+- new Tkenv display string tags not supported yet
+
+2004-11-02  Andras Varga
+
+	* drawopts.tcl: updated icon selection support for categorized icons 
+
 2004-10-20  Andras Varga
 
 	* support for categorized icons (see Tkenv ChangeLog from same date)
@@ -29,12 +38,6 @@
 2004-06-07  ------ omnetpp-3.0a5 released ------
 
 2004-05-15  ------ omnetpp-3.0a4 released ------
-
-Remaining issue: gate directions not observed in Conn Props dialog.
-when submodule has random placement, strange thing happens after OK'ing Props dialog
-new Tkenv display string tags not supported yet
-internally, images must be named with "img:" prefix (otherwise exit.gif, 
-proc.gif etc will overwrite the exit, proc Tcl commands!)
 
 2004-03-23  Andras Varga
         
