--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-10-27  Andras Varga
 
 	* cmdenv.cc: minor ajustment: makeOptionsEffective() should be called 
