--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-10-31  Andras Varga
 
 	* omnetapp.cc: RNG mapping implemented. New ini file entries:
