--- a/src/gned/ChangeLog
+++ b/src/gned/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 Remaining issues: 
 - gate directions not observed in Conn Props dialog.
 - when submodule has random placement, strange thing happens after OK'ing Props dialog
