--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-11-02  Andras Varga
 	
 	* Makefile.in/vc, nedgrammar.h: prefix ned parser symbols with "nedyy"
