--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-10-27  Andras Varga
 
         * checked in MersenneTwister.h v1.0 (15 May 2003) from Richard J.Wagner
