--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-10-04  ------ omnetpp-3.0a8 released ------
 
 2004-09-24  ------ omnetpp-3.0a7 released ------
