--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-03  ------ omnetpp-3.0a9 released ------
+
 2004-11-01  Andras Varga
 
 	* main.tcl, modinsp2.tcl: created display string tag for icon size:
