*** empty log message ***

--- a/doc/src/manual/title.tex
+++ b/doc/src/manual/title.tex
@@ -16,7 +16,7 @@
 \vspace{1.5em}
 {\LARGE Discrete Event Simulation System}\\
 \vspace{1em}
-{\large Version 3.0 preview 1}\\
+{\large Version 3.0}\\
 \vspace{1em}
 \tbf{\textit{{\LARGE User Manual}}}
 \end{center}
