*** empty log message ***

--- a/doc/src/manual/usman.tex
+++ b/doc/src/manual/usman.tex
@@ -182,7 +182,7 @@
 \include{ch-overview}
 \cleardoublepage
 
-\include{ch-example-nim}
+\include{ch-example}
 \cleardoublepage
 
 \include{ch-ned-lang}
