--- a/msvc/macros/ChangeLog
+++ b/msvc/macros/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-21  Andras Varga
+
+	* added addMSGfileToProject() macro
+
 2004-11-03  ------ omnetpp-3.0a9 released ------
 
 2004-10-04  ------ omnetpp-3.0a8 released ------
