--omnetpp-3.0b1 released-- line added to ChangeLog by _scripts/tag

--- a/src/nedc/ChangeLog
+++ b/src/nedc/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-23  ------ omnetpp-3.0b1 released ------
+
 2004-11-19  Andras Varga
 
         * main.cc: implemented -h option [thanks Johnny]
