--- a/samples/tokenring/ChangeLog
+++ b/samples/tokenring/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-23  ------ omnetpp-3.0b1 released ------
+
 2004-11-03  ------ omnetpp-3.0a9 released ------
 
 2004-10-04  ------ omnetpp-3.0a8 released ------
