--- a/src/cmdenv/ChangeLog
+++ b/src/cmdenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-23  ------ omnetpp-3.0b1 released ------
+
 FIXME todo: print event banner when simulation stops (esp with express mode),
 otherwise one doesn't know total duration and number of processed events!
 
