--- a/src/scalars/ChangeLog
+++ b/src/scalars/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-23  ------ omnetpp-3.0b1 released ------
+
 2004-11-19  Andras Varga
 
         * fix: had problem with Run#=0 in the scalar file (such file is 
