--- a/src/tkenv/ChangeLog
+++ b/src/tkenv/ChangeLog
@@ -1,3 +1,5 @@
+2004-11-23  ------ omnetpp-3.0b1 released ------
+
 2004-11-18  Andras Varga
 
 	* menuproc.tc: added exit confirmation question "Do you want to call 
