--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -4,6 +4,9 @@
 
 	* cgate.cc: info() string improved
 
+	* cmodule.cc: displayStringAsParent() renamed to backgroundDisplay-
+	String()
+
 2004-11-23  ------ omnetpp-3.0b1 released ------
 
 2004-11-08  Andras Varga
