--- a/doc/src/manual/history.tex
+++ b/doc/src/manual/history.tex
@@ -5,6 +5,9 @@
 \hline
 \tabheadcol
 \tbf{Date} & \tbf{Author} & \tbf{Change}\\\hline
+%%
+2004/11 & AV & updated for the {\opp} 3.0 release\\\hline
+%%
 2003/06 & AV & Mentioned Grace and ROOT in section "Visualizing...".
                Added section "Using STL in message classes".
                \\\hline
